# agentic-data-scientist

./: .env.example  .gitignore  README.md  TODO.md  a2as.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  pypi-publish.yml
docs/: ADK_TYPE_HINTS_COMPATIBILITY.md  api_reference.md  architecture.md  cli_reference.md  extending.md  getting_started.md  mcp_configuration.md  tools_configuration.md
examples/: README.md  basic_usage.py  cli_test.sh  context7_example.py  integration_test.py  multi_turn_conversation.py  streaming_example.py  test_data.csv  test_workflow.py
src/agentic_data_scientist/: __init__.py
src/agentic_data_scientist/agents/adk/: __init__.py  agent.py  event_compression.py  implementation_loop.py  loop_detection.py  review_confirmation.py  stage_orchestrator.py  utils.py
src/agentic_data_scientist/agents/claude_code/: agent.py  templates.py
src/agentic_data_scientist/cli/: main.py
src/agentic_data_scientist/core/: api.py  events.py
src/agentic_data_scientist/mcp/: __init__.py  config.py  registry.py
src/agentic_data_scientist/prompts/base/: __init__.py  agent_base.md  coding_base.md  coding_planning.md  coding_review.md  criteria_checker.md  global_preamble.md  implementation_review_confirmation.md  plan_generator.md  plan_maker.md  plan_orchestrator.md  plan_review_confirmation.md  plan_verifier.md  stage_reflector.md  summary.md
src/agentic_data_scientist/prompts/domain/: __init__.py
src/agentic_data_scientist/prompts/domain/bioinformatics/: __init__.py
src/agentic_data_scientist/tools/: __init__.py  file_ops.py  web_ops.py
tests/integration/: test_adk_workflow.py  test_claude_code.py  test_mcp_integration.py
tests/unit/: __init__.py  test_agents.py  test_core_api.py  test_events.py  test_mcp.py  test_stage_orchestrator.py  test_tools.py
